# interActiva

interActiva_ros_ws/: .gitignore
interActiva_ros_ws/src/interactiva_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
interActiva_ros_ws/src/interactiva_ros/interactiva_ros/: segmentation.py
interActiva_ros_ws/src/interactiva_ros/launch/: interactiva_launch.py
interActiva_ros_ws/src/interactiva_ros/src/: filter_objects_above_table.cpp  point_cloud_to_image.cpp  table_segmentation.cpp
