<?xml version="1.0"?>
<package format="3">
  <name>interactiva_ros</name>
  <version>0.0.0</version>
  <description>Paquete interactiva_ros para segmentación con RealSense usando PCL</description>
  <maintainer email="andre@todo.todo">andre</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencias principales -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>PCL</depend>

  <!-- Dependencias para pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Exportar el tipo de build para CMake -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
